--- a/pom.xml
+++ b/pom.xml
@@ -21,5 +21,11 @@
             <version>5.10.0</version> <!-- Use the latest version available -->
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.1</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
